--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "cloudinary-react": "^1.8.1",
     "date-fns": "^3.6.0",
     "date-fns-tz": "^3.1.3",
+    "dayjs": "^1.11.12",
     "nanoid": "^5.0.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
